--- a/assets/css/widgets/codeblock.css
+++ b/assets/css/widgets/codeblock.css
@@ -9,12 +9,12 @@
 
 .codeblock-lang {
   position: absolute;
-  top: 0.5em;
-  left: 0.5em;
-  right: 0.5em;
-  padding: 0.25em 0;
-  margin: 0 0.5em;
-  font-size: 0.8em;
+  top: 0.5rem;
+  left: 0.5rem;
+  right: 0.5rem;
+  padding: 0.25rem 0;
+  margin: 0 0.5rem;
+  font-size: 0.8rem;
   font-family: var(--code-font);
   border-bottom: 2px solid;
   border-bottom-color: color-mix(in srgb, currentColor 40%, transparent);
@@ -25,9 +25,9 @@
 
 .codeblock-copy {
   position: absolute;
-  top: 0.5em;
-  right: 1em;
-  padding: 0.4em;
+  top: 0.5rem;
+  right: 1rem;
+  padding: 0.4rem;
   background: none;
   border: none;
   cursor: pointer;
@@ -45,8 +45,8 @@
 }
 
 .codeblock-copy .icon-copy {
-  width: 1em;
-  height: 1em;
+  width: 1rem;
+  height: 1rem;
   display: block;
 }
 
