--- a/assets/css/widgets/expand.css
+++ b/assets/css/widgets/expand.css
@@ -36,7 +36,7 @@
   content: '+';
   display: inline-block;
   margin-left: var(--spacing-sm);
-  font-size: 1.25em;
+  font-size: 1.25rem;
   font-weight: 400;
   line-height: 1;
 }
