--- a/assets/css/widgets/terms.css
+++ b/assets/css/widgets/terms.css
@@ -6,7 +6,7 @@ nav ul.terms {
   list-style: none;
   margin: 0;
   padding: 0;
-  column-gap: 1em;
+  column-gap: 1rem;
   row-gap: 0;
 }
 
